--- a/final/index.html
+++ b/final/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B10856040</title>
+
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <hr>
-    <h1>123</h1>
+
 </body>
 
 </html>
