--- a/final/index.html
+++ b/final/index.html
@@ -7,10 +7,10 @@
     <title>B10856040</title>
 
     <style>
-        @media(max-width: 500px) {
+        @media(max-width: 640px) {
             nav ul li {
                 text-align: center;
-                display: block;
+                display: ;
                 width: 100%
             }
         }
@@ -32,6 +32,7 @@
             background: #9FBCBF;
             height: 80px;
             /*導覽列高度*/
+            position: fixed
         }
         
         nav ul {
@@ -80,6 +81,10 @@
             <li><a href="#">Home4</a></li>
         </ul>
     </nav>
+
+    <section id="sec1">
+        <img src="https://johnsnyderdpt.files.wordpress.com/2016/01/books-1.jpg" alt="background" width="100%">
+    </section>
 </body>
 
 </html>
