--- a/final/index.html
+++ b/final/index.html
@@ -10,7 +10,7 @@
         @media(max-width: 640px) {
             nav ul li {
                 text-align: center;
-                display: ;
+                display: block;
                 width: 100%
             }
         }
