--- a/final/index.html
+++ b/final/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B10856040</title>
+    <title>通識教育中心</title>
 
     <link rel="stylesheet" href="../final/CSS/01.css">
 
@@ -12,17 +12,18 @@
 
 <body>
     <nav>
-        <label class="logo">B10856040</label>
+        <label class="logo">通識教育中心</label>
         <ul>
-            <li><a href="#">Home1</a></li>
-            <li><a href="#">Home2</a></li>
-            <li><a href="#">Home3</a></li>
-            <li><a href="#">Home4</a></li>
+            <li><a href="#">最新消息</a></li>
+            <li><a href="#">中心簡介</a></li>
+            <li><a href="#">中心資訊</a></li>
+            <li><a href="#">師資陣容</a></li>
+            <li><a href="#">聯絡我們</a></li>
         </ul>
     </nav>
 
     <section id="sec1">
-        <img src="https://johnsnyderdpt.files.wordpress.com/2016/01/books-1.jpg" alt="background" width="100%">
+        <img src="http://hs.npust.edu.tw/ezfiles/164/1164/img/1593/0908.png" alt="通識教育中心" width="100%">
     </section>
 </body>
 
