--- a/final/index.html
+++ b/final/index.html
@@ -23,7 +23,9 @@
     </nav>
 
     <section id="sec1">
-        <img src="http://hs.npust.edu.tw/ezfiles/164/1164/img/1593/0908.png" alt="通識教育中心" width="100%">
+        <center>
+            <img src="http://hs.npust.edu.tw/ezfiles/164/1164/img/1593/0908.png" alt="通識教育中心" width="100%">
+        </center>
     </section>
 </body>
 
