--- a/final/index.html
+++ b/final/index.html
@@ -4,29 +4,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>通識教育中心</title>
+    <title>肉粽筆記</title>
 
     <link rel="stylesheet" href="../final/CSS/01.css">
 
 </head>
 
-<body>
-    <nav>
-        <label class="logo">通識教育中心</label>
-        <ul>
-            <li><a href="#">最新消息</a></li>
-            <li><a href="#">中心簡介</a></li>
-            <li><a href="#">中心資訊</a></li>
-            <li><a href="#">師資陣容</a></li>
-            <li><a href="#">聯絡我們</a></li>
-        </ul>
-    </nav>
+<body style="background-color: #DCF1EF;">
 
-    <section id="sec1">
-        <center>
-            <img src="http://hs.npust.edu.tw/ezfiles/164/1164/img/1593/0908.png" alt="通識教育中心" width="100%">
-        </center>
-    </section>
+    <input type="checkbox" name="" id="menu">
+
+    <div class="header col-12 col-s-12 col-ss-12">
+        <h1 class="logo">
+            肉粽筆記
+            </a>
+        </h1>
+        <a href="#">
+            <label for="menu" class="btn"> 
+            <span>選單</span>
+        </label>
+        </a>
+        <nav>
+            <a href="" target="_blank">鼠種介紹</a>
+            <a href="" target="_blank">新手上路</a>
+            <a href="" target="_blank">飼養須知</a>
+            <a href="" target="_blank">肉粽日常</a>
+
+        </nav>
+    </div>
+
+    <!------------->
+
+    <div class="col-12 col-s-12 col-ss-12 blankHeader">
+        <a name="top"></a>
+    </div>
+    <div class="bg">
+        <img src="Picture/1.jpg">
+    </div>
+    <div class="col-12 col-s-12 col-ss-12"></div>
+    <div class="about">
+        <div class="wrap">
+            <div class="title">
+                <div class="two">
+                    <div class="wrap">
+                        <div class="item-group">
+                            <div class="item">
+                                <div class="pic">
+                                    <img src="Picture/0.jpg">
+                                </div>
+                                <div class="text">
+                                    <h2>鼠種介紹</h2><br>
+                                    <h3>想養寵物，就要有心</h3><br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pictures">
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/2.JPG" alt="三線鼠">
+                <figcaption>三線鼠</figcaption>
+            </figure>
+        </div>
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/3.jpg" alt="一線鼠">
+                <figcaption>一線鼠</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-0 col-s-0 col-ss-12 newline"></div>
+        <!-- x x 2 -->
+
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/4.jpg" alt="黃金鼠">
+                <figcaption>黃金鼠</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-0 col-s-12 col-ss-0 newline"></div>
+        <!-- x 3 x -->
+
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/5.jpg" alt="公婆鼠">
+                <figcaption>公婆鼠</figcaption>
+            </figure>
+        </div>
+
+
+    </div>
+
+    <div id="footer" class="col-12 col-s-12 col-ss-12">
+        © copyright 2020 by B10856040 鄭妙菁
+    </div>
 </body>
 
 </html>
