--- a/final/index.html
+++ b/final/index.html
@@ -25,9 +25,9 @@
         </label>
         </a>
         <nav>
-            <a href="" target="_blank">鼠種介紹</a>
-            <a href="" target="_blank">新手上路</a>
-            <a href="" target="_blank">飼養須知</a>
+            <a href="#0">鼠種介紹</a>
+            <a href="https://youtu.be/TYOLlawWcVE" target="_blank">新手上路</a>
+            <a href="https://youtu.be/o-zM41YZAiU" target="_blank">飼養須知</a>
             <a href="" target="_blank">肉粽日常</a>
 
         </nav>
@@ -42,7 +42,7 @@
         <img src="Picture/1.jpg">
     </div>
     <div class="col-12 col-s-12 col-ss-12"></div>
-    <div class="about">
+    <div class="about" id="0">
         <div class="wrap">
             <div class="title">
                 <div class="two">
