--- a/final/index.html
+++ b/final/index.html
@@ -28,7 +28,7 @@
             <a href="#0">鼠種介紹</a>
             <a href="https://youtu.be/TYOLlawWcVE" target="_blank">新手上路</a>
             <a href="https://youtu.be/o-zM41YZAiU" target="_blank">飼養須知</a>
-            <a href="" target="_blank">肉粽日常</a>
+            <a href="#3">肉粽日常</a>
 
         </nav>
     </div>
@@ -95,6 +95,60 @@
             <figure>
                 <img src="Picture/5.jpg" alt="公婆鼠">
                 <figcaption>公婆鼠</figcaption>
+            </figure>
+        </div>
+
+
+    </div>
+    <div class="col-12 col-s-12 col-ss-12"></div>
+    <div class="about">
+        <div class="wrap">
+            <div class="title">
+                <div class="two">
+                    <div class="wrap">
+                        <div class="item-group">
+                            <div class="item">
+                                <div class="text">
+                                    <center>
+                                        <h2 id="3">肉粽日常</h2><br>
+                                        <h3>嗨! 你好，我是肉粽^^</h3><br>
+                                    </center>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pictures">
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/肉粽 罵葬_200703_0.jpg">
+            </figure>
+        </div>
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/肉粽 罵葬_200703_2.jpg">
+            </figure>
+        </div>
+
+        <div class="col-0 col-s-0 col-ss-12 newline"></div>
+        <!-- x x 2 -->
+
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/肉粽 罵葬_200703_3.jpg">
+            </figure>
+        </div>
+
+        <div class="col-0 col-s-12 col-ss-0 newline"></div>
+        <!-- x 3 x -->
+
+        <div class="col-3 col-s-4 col-ss-6">
+            <figure>
+                <img src="Picture/肉粽 罵葬_200703_5.jpg">
             </figure>
         </div>
 
